# sphota

./: .gitignore  LICENSE  PROGRESS.md  README.md  SETUP.md  build_sandhi_dataset.py  claude.md  evaluate.py  pyproject.toml  train.py
data/: gana1_lat_train.jsonl  generate.py
engine/: __init__.py  derivation.py  dhatupatha.json  rules.py  vikarana.py
eval/: rederive.py
model/: __init__.py  encoder.py  heads.py  model.py  train.py
sphota/: __init__.py  cli.py  sandhi.py
sphota/data/: __init__.py  dataset.py
sphota/model/: __init__.py  tokenizer.py  transformer.py
sphota/training/: __init__.py  trainer.py
